// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs snapshot works as expected 1`] = `ShallowWrapper {}`;

exports[`focus behavior Tab Focus: does not render focus ring after click 1`] = `
.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  padding-bottom: 0.75rem;
  padding-top: 0.5rem;
  font-size: 0.875rem;
  font-weight: 500;
  background: transparent;
  border: none;
  border-bottom: 3px solid;
  border-bottom-color: #6C43E0;
  border-radius: 0;
  color: #262D33;
  cursor: pointer;
  font-family: Roboto,'Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
}

.c0:active {
  border-bottom-color: #6C43E0;
}

.c0:active,
.c0:hover {
  border-bottom-color: transparent;
}

.c0:focus {
  outline: none;
}

.c0:hover {
  border-bottom-color: #6C43E0;
}

.c0:disabled {
  border-bottom-color: transparent;
  color: #939BA5;
  cursor: default;
}

.c2 .c1 {
  min-width: 3rem;
}

.c2 .c1 + .c1 {
  margin-left: 2rem;
}

<button
  aria-controls="panel-0"
  aria-orientation="horizontal"
  aria-selected="true"
  class="c0 c1 "
  font-size="small"
  font-weight="medium"
  id="tab-0"
  role="tab"
  tabindex="0"
>
  tab1
</button>
`;

exports[`focus behavior Tab Focus: renders focus ring for keyboard navigation 1`] = `
.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
  padding-bottom: 0.75rem;
  padding-top: 0.5rem;
  font-size: 0.875rem;
  font-weight: 500;
  background: transparent;
  border: none;
  border-bottom: 3px solid;
  border-bottom-color: transparent;
  border-radius: 0;
  box-shadow: 0 0 0 0.15rem rgba(151,133,242,0.25);
  color: #707781;
  cursor: pointer;
  font-family: Roboto,'Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial',sans-serif;
}

.c0:active {
  border-bottom-color: #707781;
}

.c0:active,
.c0:hover {
  border-bottom-color: transparent;
}

.c0:focus {
  outline: none;
}

.c0:hover {
  border-bottom-color: #C1C6CC;
}

.c0:disabled {
  border-bottom-color: transparent;
  color: #939BA5;
  cursor: default;
}

.c2 .c1 {
  min-width: 3rem;
}

.c2 .c1 + .c1 {
  margin-left: 2rem;
}

<button
  aria-controls="panel-1"
  aria-orientation="horizontal"
  aria-selected="false"
  class="c0 c1 "
  font-size="small"
  font-weight="medium"
  id="tab-1"
  role="tab"
  tabindex="-1"
>
  tab2
</button>
`;
